dns cache added

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 .ipynb_checkpoints
 
 #Dependency directories
-/crawler/twitch-exp-node/node_modules/
-/crawler/crawling-manager/node_modules/
+node_modules/
