--- a/crawler/twitch-exp-node/config.json
+++ b/crawler/twitch-exp-node/config.json
@@ -3,11 +3,11 @@
 	"name":"localhost"
   },
   "database":{
-	"name":"test_3"
+	"name":"test_4"
   },
   "vpn_host": {
-	"ip":"210.217.18.68",
-	"country":"ko"	 
+	"ip":"140.112.42.160",
+	"country":"tw"	 
   },
   "viewer_percentage":0.8,
   "languages":["zh-tw","ko","ja","fr","es","ru"]
