--- a/crawler/twitch-exp-node/package.json
+++ b/crawler/twitch-exp-node/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "influx": "^5.4.2",
+    "json-stringify-safe": "^5.0.1",
+    "lru-cache": "^5.1.1",
     "m3u8-parser": "^4.4.0",
+    "net": "^1.0.2",
+    "node-worker-threads-pool": "^1.3.1",
     "package.json": "^2.0.1",
     "twitch-m3u8": "^1.0.5"
   },
