comment out dns refresh cycle

--- a/crawler/twitch-exp-node/config.json
+++ b/crawler/twitch-exp-node/config.json
@@ -10,5 +10,5 @@
 	"country":"tw"	 
   },
   "viewer_percentage":0.8,
-  "languages":["zh-tw","ko","ja","fr","es","ru"]
+  "languages":["ko","ja"]
 }
