--- a/crawler/twitch-exp-node/.eslintrc.json
+++ b/crawler/twitch-exp-node/.eslintrc.json
@@ -15,6 +15,7 @@
         "ecmaVersion": 2018
     },
     "rules": {
-        "space-before-function-paren": "off"
+        "space-before-function-paren": "off",
+        "no-useless-constructor": "off"
     }
 }
