--- a/crawler/twitch-exp-node/package.json
+++ b/crawler/twitch-exp-node/package.json
@@ -10,6 +10,7 @@
   "description": "",
   "dependencies": {
     "axios": "^0.19.2",
+    "express": "^4.17.1",
     "influx": "^5.4.2",
     "ioredis": "^4.17.3",
     "json-stringify-safe": "^5.0.1",
