--- a/crawler/twitch-exp-node/package.json
+++ b/crawler/twitch-exp-node/package.json
@@ -16,16 +16,18 @@
     "json-stringify-safe": "^5.0.1",
     "lru-cache": "^5.1.1",
     "m3u8-parser": "^4.4.0",
+    "mongodb": "^3.6.2",
     "net": "^1.0.2",
     "node-worker-threads-pool": "^1.3.1",
     "package.json": "^2.0.1",
+    "read-last-lines": "^1.7.2",
     "twitch-m3u8": "^1.0.5"
   },
   "devDependencies": {
-    "eslint": "^6.5.1",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^10.0.0",
+    "eslint": "^7.9.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1"
   }
