--- a/crawler/twitch-exp-node/package.json
+++ b/crawler/twitch-exp-node/package.json
@@ -16,6 +16,7 @@
     "json-stringify-safe": "^5.0.1",
     "lru-cache": "^5.1.1",
     "m3u8-parser": "^4.4.0",
+    "mongodb": "^3.6.2",
     "net": "^1.0.2",
     "node-worker-threads-pool": "^1.3.1",
     "package.json": "^2.0.1",
